--- a/src/index.html
+++ b/src/index.html
@@ -11,74 +11,71 @@
 
 <body>
     <nav class="bg-white relative w-full mx-auto shadow-md p-4">
-        <div class="flex items-center justify-between container mx-auto">
-            <div class="text-3xl font-bold">
+        <div class="flex items-center container mx-auto px-6">
+            <h1 class="text-3xl font-bold text-blue-800">
                 Tailwind UI
+            </h1>
+            <div class="space-x-8 hidden md:flex px-6">
+                <a href="" class="font-bold cursor-pointer hover:text-gray-500">Product</a>
+                <a href="" class="font-bold cursor-pointer hover:text-gray-500">Use Cases</a>
             </div>
-            <div class="space-x-3 hidden md:flex">
-                <a href="" class="font-bold cursor-pointer hover:text-gray-500">Home</a>
-                <a href="" class="font-bold cursor-pointer hover:text-gray-500">Pricing</a>
-                <a href="" class="font-bold cursor-pointer hover:text-gray-500">About Us</a>
-                <a href="" class="font-bold cursor-pointer hover:text-gray-500">Contact Us</a>
-            </div>
-            <div>
-                <button class="bg-red-600 text-white font-bold p-3 rounded-xl hover:bg-red-700">Get Started</button>
+            <div class="hidden md:flex items-center space-x-6 mx-auto">
+                <div class="space-x-4 flex-row">
+                    <a href="" class="font-bold cursor-pointer hover:text-gray-500">Pricing</a>
+                    <a href="" class="font-bold cursor-pointer hover:text-gray-500">Resources</a>
+                </div>
+                <div class="flex-row">
+                    <button class="bg-blue-800 text-white px-4 py-2 rounded-xl">Get Started</button>
+                </div>
             </div>
         </div>
     </nav>
-    <div class="container mx-auto mt-10 px-4">
-        <div class="flex flex-col md:flex-row">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente incidunt velit, natus neque repellat
-                vero in cum, magni, a doloribus cumque? Minus quia cumque, praesentium consequuntur quas sunt dolorem
-                molestias.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente incidunt velit, natus neque repellat
-                vero in cum, magni, a doloribus cumque? Minus quia cumque, praesentium consequuntur quas sunt dolorem
-                molestias.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente incidunt velit, natus neque repellat
-                vero in cum, magni, a doloribus cumque? Minus quia cumque, praesentium consequuntur quas sunt dolorem
-                molestias.</p>
+    <div class="container flex flex-col-reverse lg:flex-row items-center mt-10 mx-auto px-11">
+        <!-- <div class="flex flex-row"> -->
+        <!-- <div class="max-w-md"> -->
+        <img src="../images/img-01.png" alt="" class="md:mt-0 mt-3 md:max-w-md rounded-xl">
+        <!-- </div> -->
+        <div class="px-11 space-y-4">
+            <h1 class="md:text-6xl text-4xl font-extrabold">Thank You for<br> Choosing Tailwind</h1>
+            <p>Enter your email address to get a link.</p>
+            <input type="email" class="bg-white border border-gray-300 px-11 rounded-lg outline-none py-2"
+                placeholder="Enter your email id">
+            <button class="text-white bg-blue-800 rounded-lg px-4 py-2">Send Link</button>
+            <p class="text-gray-500">By Clicking Send, you agree to our <a href="/"
+                    class="text-blue-800 underline">Terms and
+                    services</a> and <a href="/" class="text-blue-800 underline">Policy</a></p>
         </div>
-        <h1 class="text-center font-bold text-5xl mt-3">What's New in Tailwind?</h1>
-        <div
-            class="mt-3 items-center px-6 md:px-10 flex flex-col md:flex-row md:space-x-3 space-y-3 md:space-y-0 mx-auto">
-            <div class="flex flex-col">
-                <p class="font-bold">Better Classes</p>
-                <ul>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                </ul>
-            </div>
-            <div class="flex flex-col">
-                <p class="font-bold">Better Classes</p>
-                <ul>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                </ul>
-            </div>
-            <div class="flex flex-col">
-                <p class="font-bold">Better Classes</p>
-                <ul>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                </ul>
-            </div>
-            <div class="flex flex-col">
-                <p class="font-bold">Better Classes</p>
-                <ul>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                    <li>New Classes to aid agile development</li>
-                </ul>
-            </div>
-        </div>
+        <!-- </div> -->
     </div>
+    <footer class="bg-blue-800 mt-28 px-6 py-6">
+        <div class="container flex flex-col-reverse md:flex-row mx-auto mb-0 justify-between items-center">
+            <div class="space-y-6 text-center md:text-left">
+                <h1 class="font-bold text-3xl text-white">Tailwind UI</h1>
+                <p class="text-white text-sm">Lorem ipsum dolor<br> sit amet consectetur adipisicing elit. Natus,
+                    tenetur.
+                </p>
+            </div>
+            <div class="flex-col">
+                <p class="text-white font-bold">Pricing</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+            </div>
+            <div class="flex-col">
+                <p class="text-white font-bold">Pricing</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+            </div>
+            <div class="flex-col">
+                <p class="text-white font-bold">Pricing</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+                <p class="text-white text-sm">Video Collection</p>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
